--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -3,10 +3,12 @@ global:
   evaluation_interval: 15s
 
 rule_files:
-# - "first.rules"
-# - "second.rules"
+  - alerts.yml
 
 scrape_configs:
-  - job_name: prometheus
+  - job_name: services
+    metrics_path: /metrics
     static_configs:
-      - targets: ['localhost:9090']
+      - targets:
+          - 'prometheus:9090'
+          - 'idonotexists:564'
