--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -1,14 +1,24 @@
 global:
   scrape_interval:     15s
   evaluation_interval: 15s
+  # scrape_timeout is set to the global default (10s).
 
 rule_files:
   - alerts.yml
 
 scrape_configs:
-  - job_name: services
-    metrics_path: /metrics
+  - job_name: 'prometheus'
+    # metrics_path defaults to '/metrics'
+    # scheme defaults to 'http'.
     static_configs:
       - targets:
           - 'prometheus:9090'
-          - 'idonotexists:564'
+          - '127.0.0.1:9000'
+          - '192.168.68.120:9000'
+  - job_name: 'spring-actuator'
+    metrics_path: '/actuator/prometheus'
+    scrape_interval: 5s
+    static_configs:
+      - targets:
+          - '127.0.0.1:8091'
+          - '192.168.68.120:8091'
