--- a/.gitignore
+++ b/.gitignore
@@ -2,39 +2,13 @@
 [Tt]humbs.db
 *.DS_Store
 
+# Java
+target
+
 # Intellij
 .idea/
 *.iml
 modules.xml
-
-# Visual Studio files
-*.[Oo]bj
-*.user
-*.aps
-*.pch
-*.vspscc
-*.vssscc
-*_i.c
-*_p.c
-*.ncb
-*.suo
-*.tlb
-*.tlh
-*.bak
-*.[Cc]ache
-*.ilk
-*.log
-*.lib
-*.sbr
-*.sdf
-*.pyc
-*.xml
-ipch/
-obj/
-[Bb]in
-[Dd]ebug*/
-[Rr]elease*/
-Ankh.NoLoad
 
 # Tooling
 _ReSharper*/
